--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "did-core-sdk": "file:did-core-sdk-1.0.0.tgz",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
